--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 #container {
     /* border-color: 5px solid rgb(6, 233, 13); */
     width: 1200px;
-    margin: 140px 200px;
+    margin: 80px 200px;
     text-align: center;
     font-size: x-large;
     font-weight: 600;
-    box-shadow: 1px 1px 7px;
+    box-shadow: 0px 0px 11px rgb(0, 0, 0);
+    background-color: aliceblue;
+    border-radius: 30px;
 
 }
 
@@ -70,3 +72,58 @@ td:hover {
     transform: translateY(-10px);
     box-shadow: 0 4px 8px rgba(0, 4, 255, 0.3);
 }
+
+
+footer {
+    background-color: rgb(0, 0, 0);
+    height: 100px;
+    margin-top: 170px;
+
+
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+    background-color: rgb(229, 229, 229);
+
+}
+
+header>h1 {
+    height: 100px;
+    background-color: black;
+    margin: 0px;
+
+
+
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3em;
+    font-weight: 700;
+
+}
+
+.h2 {
+    color: aliceblue;
+    font-size: larger;
+    line-height: 95px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2em;
+    /* margin-top: -30px; */
+}
+
+a{
+    
+    color: aliceblue;
+    font-size: 20px;
+}
+/* .h3{
+    font-size: large;
+    color: aliceblue;
+   
+} */
