--- a/style.css
+++ b/style.css
@@ -65,12 +65,12 @@ span {
 
 
 td {
-    transition: all 0.2s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 
 td:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 4px 8px rgba(0, 4, 255, 0.3);
+    transform: translateY(-15px);
+    box-shadow: 0 7px 5px rgba(85, 85, 85, 0.3);
 }
 
 
@@ -121,6 +121,7 @@ a{
     
     color: aliceblue;
     font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 /* .h3{
     font-size: large;
